# fishmlserv

./: Dockerfile  README.md  Untitled.ipynb  fly.toml  pyproject.toml  r.txt  requirements.txt
src/fishmlserv_git/: main.py
src/fishmlserv_git/ml/: mission_c1.py  mission_c2.py  ml.py
src/fishmlserv_git/model/: manager.py
